# RAG

./: .env  MD.md  RAG.md  docker-compose.yml  pyproject.toml
app/: main.py
app/agent/: executor.py  loop.py  memory.py  tools.py
app/api/: agent.py  ingest.py  query.py
app/core/: config.py
app/rag/: chunker.py  embedder.py  loader.py  qdrant.py  retrieval.py  schema.py
tests/: test_agent.py  test_ingestion.py  test_retrieval.py
