[project]
name = "rag-agent"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    # API & Config
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",      # file uploads

    # OpenAI
    "openai>=1.35.0",

    # PDF Processing
    "pypdf>=4.2.0",                 # fast text extraction, metadata
    "pdfplumber>=0.11.0",           # tables, layout-aware extraction

    # Vector DB
    "qdrant-client>=1.9.0",

    # Text Processing
    "tiktoken>=0.7.0",              # token counting for chunking
    "nltk>=3.8.0",                  # sentence tokenization
    "chardet>=5.2.0",               # encoding detection

    # Utilities
    "tenacity>=8.4.0",              # retry logic
    "structlog>=24.1.0",            # structured logging
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]
